[inspector] Record EvaluateScript trace event upon console evaluation

It will allow timeline to show JS profile on code evaluated from console.

BUG=chromium:655430

Committed: https://crrev.com/6882c91ecd222f3ee2feb42ad73fbc796d5c8172
Review-Url: https://codereview.chromium.org/2413943002
Cr-Original-Commit-Position: refs/heads/master@{#40289}
Cr-Commit-Position: refs/heads/master@{#40323}